--- a/whatsmeow-nchat-sys/Cargo.toml
+++ b/whatsmeow-nchat-sys/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bitflags = { version = "2", features = ["std"] }
 libc = "0.2"
 
 [build-dependencies]
