--- a/whatsmeow-nchat-sys/Cargo.toml
+++ b/whatsmeow-nchat-sys/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bitflags = { version = "2", features = ["std"] }
 libc = "0.2"
+tokio = { version = "1", features = ["sync"] }
 
 [build-dependencies]
 bindgen = "0.72"
