--- a/whatsmeow-nchat/Cargo.toml
+++ b/whatsmeow-nchat/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 whatsmeow-nchat-sys.path = "../whatsmeow-nchat-sys"
 thiserror = "2"
+tokio = { version = "1", features = ["sync"] }
