--- a/whatsmeow-nchat-sys/Cargo.toml
+++ b/whatsmeow-nchat-sys/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 bitflags = { version = "2", features = ["std"] }
 libc = "0.2"
 tokio = { version = "1", features = ["sync"] }
+serde = { version = "1", features = ["derive"], optional = true }
+
+[features]
+default = []
+serde = ["dep:serde"]
 
 [build-dependencies]
 bindgen = "0.72"
